scotch_5.1.11/src/libscotch/y.output
Terminaux inutilisés dans la grammaire

   VALSTRAT
   VALPARAM
   VALTEST


Grammaire

    0 $accept: STRAT $end

    1 STRAT: STRATSELECT

    2 STRATSELECT: STRATSELECT '|' STRATEMPTY
    3            | STRATEMPTY

    4 STRATEMPTY: STRATCONCAT
    5           | /* vide */

    6 STRATCONCAT: STRATCONCAT STRATTEST
    7            | STRATTEST

    8 $@1: /* vide */

    9 $@2: /* vide */

   10 STRATTEST: $@1 '/' TEST $@2 '?' STRATSELECT STRATTESTELSE ';'
   11          | STRATGROUP

   12 STRATTESTELSE: ':' STRATSELECT
   13              | /* vide */

   14 STRATGROUP: '(' STRATSELECT ')'
   15           | STRATMETHOD

   16 $@3: /* vide */

   17 STRATMETHOD: METHODNAME $@3 METHODPARAM

   18 $@4: /* vide */

   19 $@5: /* vide */

   20 METHODPARAM: $@4 '{' PARAMLIST $@5 '}'
   21            | /* vide */

   22 PARAMLIST: PARAMLIST ',' PARAMPARAM
   23          | PARAMPARAM

   24 @6: /* vide */

   25 PARAMPARAM: PARAMNAME @6 '=' PARAMVAL

   26 PARAMVAL: VALCASE
   27         | VALDOUBLE
   28         | VALINT
   29         | VALSTRING

   30 @7: /* vide */

   31 PARAMVAL: @7 STRATSELECT
   32         | error

   33 TEST: TESTOR

   34 TESTOR: TESTOR '|' TESTAND
   35       | TESTAND

   36 TESTAND: TESTAND '&' TESTNOT
   37        | TESTNOT

   38 TESTNOT: '!' TESTNOT
   39        | '(' TESTOR ')'
   40        | TESTREL

   41 TESTREL: TESTEXPR1 TESTRELOP TESTEXPR1

   42 TESTRELOP: '<'
   43          | '='
   44          | '>'

   45 TESTEXPR1: TESTEXPR1 TESTEXPR1OP TESTEXPR2
   46          | TESTEXPR2

   47 TESTEXPR1OP: '+'
   48            | '-'

   49 TESTEXPR2: TESTEXPR2 TESTEXPR2OP TESTEXPR3
   50          | TESTEXPR3

   51 TESTEXPR2OP: '*'

   52 TESTEXPR3: TESTEXPR3 TESTEXPR3OP TESTEXPR4
   53          | TESTEXPR4

   54 TESTEXPR3OP: '%'

   55 TESTEXPR4: '(' TESTEXPR1 ')'
   56          | TESTVAL
   57          | TESTVAR

   58 TESTVAL: VALDOUBLE
   59        | VALINT

   60 TESTVAR: PARAMNAME


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 38
'%' (37) 54
'&' (38) 36
'(' (40) 14 39 55
')' (41) 14 39 55
'*' (42) 51
'+' (43) 47
',' (44) 22
'-' (45) 48
'/' (47) 10
':' (58) 12
';' (59) 10
'<' (60) 42
'=' (61) 25 43
'>' (62) 44
'?' (63) 10
'{' (123) 20
'|' (124) 2 34
'}' (125) 20
error (256) 32
METHODNAME (258) 17
PARAMNAME (259) 25 60
VALCASE (260) 26
VALDOUBLE (261) 27 58
VALINT (262) 28 59
VALSTRING (263) 29
VALSTRAT (264)
VALPARAM (265)
VALTEST (266)


Non-terminaux, suivis des règles où ils apparaissent

$accept (31)
    à gauche: 0
STRAT (32)
    à gauche: 1, à droite: 0
STRATSELECT (33)
    à gauche: 2 3, à droite: 1 2 10 12 14 31
STRATEMPTY (34)
    à gauche: 4 5, à droite: 2 3
STRATCONCAT (35)
    à gauche: 6 7, à droite: 4 6
STRATTEST (36)
    à gauche: 10 11, à droite: 6 7
$@1 (37)
    à gauche: 8, à droite: 10
$@2 (38)
    à gauche: 9, à droite: 10
STRATTESTELSE (39)
    à gauche: 12 13, à droite: 10
STRATGROUP (40)
    à gauche: 14 15, à droite: 11
STRATMETHOD (41)
    à gauche: 17, à droite: 15
$@3 (42)
    à gauche: 16, à droite: 17
METHODPARAM (43)
    à gauche: 20 21, à droite: 17
$@4 (44)
    à gauche: 18, à droite: 20
$@5 (45)
    à gauche: 19, à droite: 20
PARAMLIST (46)
    à gauche: 22 23, à droite: 20 22
PARAMPARAM (47)
    à gauche: 25, à droite: 22 23
@6 (48)
    à gauche: 24, à droite: 25
PARAMVAL (49)
    à gauche: 26 27 28 29 31 32, à droite: 25
@7 (50)
    à gauche: 30, à droite: 31
TEST (51)
    à gauche: 33, à droite: 10
TESTOR (52)
    à gauche: 34 35, à droite: 33 34 39
TESTAND (53)
    à gauche: 36 37, à droite: 34 35 36
TESTNOT (54)
    à gauche: 38 39 40, à droite: 36 37 38
TESTREL (55)
    à gauche: 41, à droite: 40
TESTRELOP (56)
    à gauche: 42 43 44, à droite: 41
TESTEXPR1 (57)
    à gauche: 45 46, à droite: 41 45 55
TESTEXPR1OP (58)
    à gauche: 47 48, à droite: 45
TESTEXPR2 (59)
    à gauche: 49 50, à droite: 45 46 49
TESTEXPR2OP (60)
    à gauche: 51, à droite: 49
TESTEXPR3 (61)
    à gauche: 52 53, à droite: 49 50 52
TESTEXPR3OP (62)
    à gauche: 54, à droite: 52
TESTEXPR4 (63)
    à gauche: 55 56 57, à droite: 52 53
TESTVAL (64)
    à gauche: 58 59, à droite: 56
TESTVAR (65)
    à gauche: 60, à droite: 57


État 0

    0 $accept: . STRAT $end

    METHODNAME  décalage et aller à l'état 1
    '('         décalage et aller à l'état 2

    '/'       réduction par utilisation de la règle 8 ($@1)
    $défaut  réduction par utilisation de la règle 5 (STRATEMPTY)

    STRAT        aller à l'état 3
    STRATSELECT  aller à l'état 4
    STRATEMPTY   aller à l'état 5
    STRATCONCAT  aller à l'état 6
    STRATTEST    aller à l'état 7
    $@1          aller à l'état 8
    STRATGROUP   aller à l'état 9
    STRATMETHOD  aller à l'état 10


État 1

   17 STRATMETHOD: METHODNAME . $@3 METHODPARAM

    $défaut  réduction par utilisation de la règle 16 ($@3)

    $@3  aller à l'état 11


État 2

   14 STRATGROUP: '(' . STRATSELECT ')'

    METHODNAME  décalage et aller à l'état 1
    '('         décalage et aller à l'état 2

    '/'       réduction par utilisation de la règle 8 ($@1)
    $défaut  réduction par utilisation de la règle 5 (STRATEMPTY)

    STRATSELECT  aller à l'état 12
    STRATEMPTY   aller à l'état 5
    STRATCONCAT  aller à l'état 6
    STRATTEST    aller à l'état 7
    $@1          aller à l'état 8
    STRATGROUP   aller à l'état 9
    STRATMETHOD  aller à l'état 10


État 3

    0 $accept: STRAT . $end

    $end  décalage et aller à l'état 13


État 4

    1 STRAT: STRATSELECT .
    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY

    '|'  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 1 (STRAT)


État 5

    3 STRATSELECT: STRATEMPTY .

    $défaut  réduction par utilisation de la règle 3 (STRATSELECT)


État 6

    4 STRATEMPTY: STRATCONCAT .
    6 STRATCONCAT: STRATCONCAT . STRATTEST

    METHODNAME  décalage et aller à l'état 1
    '('         décalage et aller à l'état 2

    '/'       réduction par utilisation de la règle 8 ($@1)
    $défaut  réduction par utilisation de la règle 4 (STRATEMPTY)

    STRATTEST    aller à l'état 15
    $@1          aller à l'état 8
    STRATGROUP   aller à l'état 9
    STRATMETHOD  aller à l'état 10


État 7

    7 STRATCONCAT: STRATTEST .

    $défaut  réduction par utilisation de la règle 7 (STRATCONCAT)


État 8

   10 STRATTEST: $@1 . '/' TEST $@2 '?' STRATSELECT STRATTESTELSE ';'

    '/'  décalage et aller à l'état 16


État 9

   11 STRATTEST: STRATGROUP .

    $défaut  réduction par utilisation de la règle 11 (STRATTEST)


État 10

   15 STRATGROUP: STRATMETHOD .

    $défaut  réduction par utilisation de la règle 15 (STRATGROUP)


État 11

   17 STRATMETHOD: METHODNAME $@3 . METHODPARAM

    '{'       réduction par utilisation de la règle 18 ($@4)
    $défaut  réduction par utilisation de la règle 21 (METHODPARAM)

    METHODPARAM  aller à l'état 17
    $@4          aller à l'état 18


État 12

    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY
   14 STRATGROUP: '(' STRATSELECT . ')'

    '|'  décalage et aller à l'état 14
    ')'  décalage et aller à l'état 19


État 13

    0 $accept: STRAT $end .

    $défaut  accepter


État 14

    2 STRATSELECT: STRATSELECT '|' . STRATEMPTY

    METHODNAME  décalage et aller à l'état 1
    '('         décalage et aller à l'état 2

    '/'       réduction par utilisation de la règle 8 ($@1)
    $défaut  réduction par utilisation de la règle 5 (STRATEMPTY)

    STRATEMPTY   aller à l'état 20
    STRATCONCAT  aller à l'état 6
    STRATTEST    aller à l'état 7
    $@1          aller à l'état 8
    STRATGROUP   aller à l'état 9
    STRATMETHOD  aller à l'état 10


État 15

    6 STRATCONCAT: STRATCONCAT STRATTEST .

    $défaut  réduction par utilisation de la règle 6 (STRATCONCAT)


État 16

   10 STRATTEST: $@1 '/' . TEST $@2 '?' STRATSELECT STRATTESTELSE ';'

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 24
    '!'        décalage et aller à l'état 25

    TEST       aller à l'état 26
    TESTOR     aller à l'état 27
    TESTAND    aller à l'état 28
    TESTNOT    aller à l'état 29
    TESTREL    aller à l'état 30
    TESTEXPR1  aller à l'état 31
    TESTEXPR2  aller à l'état 32
    TESTEXPR3  aller à l'état 33
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 17

   17 STRATMETHOD: METHODNAME $@3 METHODPARAM .

    $défaut  réduction par utilisation de la règle 17 (STRATMETHOD)


État 18

   20 METHODPARAM: $@4 . '{' PARAMLIST $@5 '}'

    '{'  décalage et aller à l'état 37


État 19

   14 STRATGROUP: '(' STRATSELECT ')' .

    $défaut  réduction par utilisation de la règle 14 (STRATGROUP)


État 20

    2 STRATSELECT: STRATSELECT '|' STRATEMPTY .

    $défaut  réduction par utilisation de la règle 2 (STRATSELECT)


État 21

   60 TESTVAR: PARAMNAME .

    $défaut  réduction par utilisation de la règle 60 (TESTVAR)


État 22

   58 TESTVAL: VALDOUBLE .

    $défaut  réduction par utilisation de la règle 58 (TESTVAL)


État 23

   59 TESTVAL: VALINT .

    $défaut  réduction par utilisation de la règle 59 (TESTVAL)


État 24

   39 TESTNOT: '(' . TESTOR ')'
   55 TESTEXPR4: '(' . TESTEXPR1 ')'

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 24
    '!'        décalage et aller à l'état 25

    TESTOR     aller à l'état 38
    TESTAND    aller à l'état 28
    TESTNOT    aller à l'état 29
    TESTREL    aller à l'état 30
    TESTEXPR1  aller à l'état 39
    TESTEXPR2  aller à l'état 32
    TESTEXPR3  aller à l'état 33
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 25

   38 TESTNOT: '!' . TESTNOT

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 24
    '!'        décalage et aller à l'état 25

    TESTNOT    aller à l'état 40
    TESTREL    aller à l'état 30
    TESTEXPR1  aller à l'état 31
    TESTEXPR2  aller à l'état 32
    TESTEXPR3  aller à l'état 33
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 26

   10 STRATTEST: $@1 '/' TEST . $@2 '?' STRATSELECT STRATTESTELSE ';'

    $défaut  réduction par utilisation de la règle 9 ($@2)

    $@2  aller à l'état 41


État 27

   33 TEST: TESTOR .
   34 TESTOR: TESTOR . '|' TESTAND

    '|'  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 33 (TEST)


État 28

   35 TESTOR: TESTAND .
   36 TESTAND: TESTAND . '&' TESTNOT

    '&'  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 35 (TESTOR)


État 29

   37 TESTAND: TESTNOT .

    $défaut  réduction par utilisation de la règle 37 (TESTAND)


État 30

   40 TESTNOT: TESTREL .

    $défaut  réduction par utilisation de la règle 40 (TESTNOT)


État 31

   41 TESTREL: TESTEXPR1 . TESTRELOP TESTEXPR1
   45 TESTEXPR1: TESTEXPR1 . TESTEXPR1OP TESTEXPR2

    '='  décalage et aller à l'état 44
    '<'  décalage et aller à l'état 45
    '>'  décalage et aller à l'état 46
    '+'  décalage et aller à l'état 47
    '-'  décalage et aller à l'état 48

    TESTRELOP    aller à l'état 49
    TESTEXPR1OP  aller à l'état 50


État 32

   46 TESTEXPR1: TESTEXPR2 .
   49 TESTEXPR2: TESTEXPR2 . TESTEXPR2OP TESTEXPR3

    '*'  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 46 (TESTEXPR1)

    TESTEXPR2OP  aller à l'état 52


État 33

   50 TESTEXPR2: TESTEXPR3 .
   52 TESTEXPR3: TESTEXPR3 . TESTEXPR3OP TESTEXPR4

    '%'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 50 (TESTEXPR2)

    TESTEXPR3OP  aller à l'état 54


État 34

   53 TESTEXPR3: TESTEXPR4 .

    $défaut  réduction par utilisation de la règle 53 (TESTEXPR3)


État 35

   56 TESTEXPR4: TESTVAL .

    $défaut  réduction par utilisation de la règle 56 (TESTEXPR4)


État 36

   57 TESTEXPR4: TESTVAR .

    $défaut  réduction par utilisation de la règle 57 (TESTEXPR4)


État 37

   20 METHODPARAM: $@4 '{' . PARAMLIST $@5 '}'

    PARAMNAME  décalage et aller à l'état 55

    PARAMLIST   aller à l'état 56
    PARAMPARAM  aller à l'état 57


État 38

   34 TESTOR: TESTOR . '|' TESTAND
   39 TESTNOT: '(' TESTOR . ')'

    '|'  décalage et aller à l'état 42
    ')'  décalage et aller à l'état 58


État 39

   41 TESTREL: TESTEXPR1 . TESTRELOP TESTEXPR1
   45 TESTEXPR1: TESTEXPR1 . TESTEXPR1OP TESTEXPR2
   55 TESTEXPR4: '(' TESTEXPR1 . ')'

    ')'  décalage et aller à l'état 59
    '='  décalage et aller à l'état 44
    '<'  décalage et aller à l'état 45
    '>'  décalage et aller à l'état 46
    '+'  décalage et aller à l'état 47
    '-'  décalage et aller à l'état 48

    TESTRELOP    aller à l'état 49
    TESTEXPR1OP  aller à l'état 50


État 40

   38 TESTNOT: '!' TESTNOT .

    $défaut  réduction par utilisation de la règle 38 (TESTNOT)


État 41

   10 STRATTEST: $@1 '/' TEST $@2 . '?' STRATSELECT STRATTESTELSE ';'

    '?'  décalage et aller à l'état 60


État 42

   34 TESTOR: TESTOR '|' . TESTAND

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 24
    '!'        décalage et aller à l'état 25

    TESTAND    aller à l'état 61
    TESTNOT    aller à l'état 29
    TESTREL    aller à l'état 30
    TESTEXPR1  aller à l'état 31
    TESTEXPR2  aller à l'état 32
    TESTEXPR3  aller à l'état 33
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 43

   36 TESTAND: TESTAND '&' . TESTNOT

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 24
    '!'        décalage et aller à l'état 25

    TESTNOT    aller à l'état 62
    TESTREL    aller à l'état 30
    TESTEXPR1  aller à l'état 31
    TESTEXPR2  aller à l'état 32
    TESTEXPR3  aller à l'état 33
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 44

   43 TESTRELOP: '=' .

    $défaut  réduction par utilisation de la règle 43 (TESTRELOP)


État 45

   42 TESTRELOP: '<' .

    $défaut  réduction par utilisation de la règle 42 (TESTRELOP)


État 46

   44 TESTRELOP: '>' .

    $défaut  réduction par utilisation de la règle 44 (TESTRELOP)


État 47

   47 TESTEXPR1OP: '+' .

    $défaut  réduction par utilisation de la règle 47 (TESTEXPR1OP)


État 48

   48 TESTEXPR1OP: '-' .

    $défaut  réduction par utilisation de la règle 48 (TESTEXPR1OP)


État 49

   41 TESTREL: TESTEXPR1 TESTRELOP . TESTEXPR1

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 63

    TESTEXPR1  aller à l'état 64
    TESTEXPR2  aller à l'état 32
    TESTEXPR3  aller à l'état 33
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 50

   45 TESTEXPR1: TESTEXPR1 TESTEXPR1OP . TESTEXPR2

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 63

    TESTEXPR2  aller à l'état 65
    TESTEXPR3  aller à l'état 33
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 51

   51 TESTEXPR2OP: '*' .

    $défaut  réduction par utilisation de la règle 51 (TESTEXPR2OP)


État 52

   49 TESTEXPR2: TESTEXPR2 TESTEXPR2OP . TESTEXPR3

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 63

    TESTEXPR3  aller à l'état 66
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 53

   54 TESTEXPR3OP: '%' .

    $défaut  réduction par utilisation de la règle 54 (TESTEXPR3OP)


État 54

   52 TESTEXPR3: TESTEXPR3 TESTEXPR3OP . TESTEXPR4

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 63

    TESTEXPR4  aller à l'état 67
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 55

   25 PARAMPARAM: PARAMNAME . @6 '=' PARAMVAL

    $défaut  réduction par utilisation de la règle 24 (@6)

    @6  aller à l'état 68


État 56

   20 METHODPARAM: $@4 '{' PARAMLIST . $@5 '}'
   22 PARAMLIST: PARAMLIST . ',' PARAMPARAM

    ','  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 19 ($@5)

    $@5  aller à l'état 70


État 57

   23 PARAMLIST: PARAMPARAM .

    $défaut  réduction par utilisation de la règle 23 (PARAMLIST)


État 58

   39 TESTNOT: '(' TESTOR ')' .

    $défaut  réduction par utilisation de la règle 39 (TESTNOT)


État 59

   55 TESTEXPR4: '(' TESTEXPR1 ')' .

    $défaut  réduction par utilisation de la règle 55 (TESTEXPR4)


État 60

   10 STRATTEST: $@1 '/' TEST $@2 '?' . STRATSELECT STRATTESTELSE ';'

    METHODNAME  décalage et aller à l'état 1
    '('         décalage et aller à l'état 2

    '/'       réduction par utilisation de la règle 8 ($@1)
    $défaut  réduction par utilisation de la règle 5 (STRATEMPTY)

    STRATSELECT  aller à l'état 71
    STRATEMPTY   aller à l'état 5
    STRATCONCAT  aller à l'état 6
    STRATTEST    aller à l'état 7
    $@1          aller à l'état 8
    STRATGROUP   aller à l'état 9
    STRATMETHOD  aller à l'état 10


État 61

   34 TESTOR: TESTOR '|' TESTAND .
   36 TESTAND: TESTAND . '&' TESTNOT

    '&'  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 34 (TESTOR)


État 62

   36 TESTAND: TESTAND '&' TESTNOT .

    $défaut  réduction par utilisation de la règle 36 (TESTAND)


État 63

   55 TESTEXPR4: '(' . TESTEXPR1 ')'

    PARAMNAME  décalage et aller à l'état 21
    VALDOUBLE  décalage et aller à l'état 22
    VALINT     décalage et aller à l'état 23
    '('        décalage et aller à l'état 63

    TESTEXPR1  aller à l'état 72
    TESTEXPR2  aller à l'état 32
    TESTEXPR3  aller à l'état 33
    TESTEXPR4  aller à l'état 34
    TESTVAL    aller à l'état 35
    TESTVAR    aller à l'état 36


État 64

   41 TESTREL: TESTEXPR1 TESTRELOP TESTEXPR1 .
   45 TESTEXPR1: TESTEXPR1 . TESTEXPR1OP TESTEXPR2

    '+'  décalage et aller à l'état 47
    '-'  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 41 (TESTREL)

    TESTEXPR1OP  aller à l'état 50


État 65

   45 TESTEXPR1: TESTEXPR1 TESTEXPR1OP TESTEXPR2 .
   49 TESTEXPR2: TESTEXPR2 . TESTEXPR2OP TESTEXPR3

    '*'  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 45 (TESTEXPR1)

    TESTEXPR2OP  aller à l'état 52


État 66

   49 TESTEXPR2: TESTEXPR2 TESTEXPR2OP TESTEXPR3 .
   52 TESTEXPR3: TESTEXPR3 . TESTEXPR3OP TESTEXPR4

    '%'  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 49 (TESTEXPR2)

    TESTEXPR3OP  aller à l'état 54


État 67

   52 TESTEXPR3: TESTEXPR3 TESTEXPR3OP TESTEXPR4 .

    $défaut  réduction par utilisation de la règle 52 (TESTEXPR3)


État 68

   25 PARAMPARAM: PARAMNAME @6 . '=' PARAMVAL

    '='  décalage et aller à l'état 73


État 69

   22 PARAMLIST: PARAMLIST ',' . PARAMPARAM

    PARAMNAME  décalage et aller à l'état 55

    PARAMPARAM  aller à l'état 74


État 70

   20 METHODPARAM: $@4 '{' PARAMLIST $@5 . '}'

    '}'  décalage et aller à l'état 75


État 71

    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY
   10 STRATTEST: $@1 '/' TEST $@2 '?' STRATSELECT . STRATTESTELSE ';'

    '|'  décalage et aller à l'état 14
    ':'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 13 (STRATTESTELSE)

    STRATTESTELSE  aller à l'état 77


État 72

   45 TESTEXPR1: TESTEXPR1 . TESTEXPR1OP TESTEXPR2
   55 TESTEXPR4: '(' TESTEXPR1 . ')'

    ')'  décalage et aller à l'état 59
    '+'  décalage et aller à l'état 47
    '-'  décalage et aller à l'état 48

    TESTEXPR1OP  aller à l'état 50


État 73

   25 PARAMPARAM: PARAMNAME @6 '=' . PARAMVAL

    error      décalage et aller à l'état 78
    VALCASE    décalage et aller à l'état 79
    VALDOUBLE  décalage et aller à l'état 80
    VALINT     décalage et aller à l'état 81
    VALSTRING  décalage et aller à l'état 82

    METHODNAME  réduction par utilisation de la règle 30 (@7)
    '|'         réduction par utilisation de la règle 30 (@7)
    '/'         réduction par utilisation de la règle 30 (@7)
    '('         réduction par utilisation de la règle 30 (@7)
    '}'         réduction par utilisation de la règle 30 (@7)
    ','         réduction par utilisation de la règle 30 (@7)

    PARAMVAL  aller à l'état 83
    @7        aller à l'état 84


État 74

   22 PARAMLIST: PARAMLIST ',' PARAMPARAM .

    $défaut  réduction par utilisation de la règle 22 (PARAMLIST)


État 75

   20 METHODPARAM: $@4 '{' PARAMLIST $@5 '}' .

    $défaut  réduction par utilisation de la règle 20 (METHODPARAM)


État 76

   12 STRATTESTELSE: ':' . STRATSELECT

    METHODNAME  décalage et aller à l'état 1
    '('         décalage et aller à l'état 2

    '/'       réduction par utilisation de la règle 8 ($@1)
    $défaut  réduction par utilisation de la règle 5 (STRATEMPTY)

    STRATSELECT  aller à l'état 85
    STRATEMPTY   aller à l'état 5
    STRATCONCAT  aller à l'état 6
    STRATTEST    aller à l'état 7
    $@1          aller à l'état 8
    STRATGROUP   aller à l'état 9
    STRATMETHOD  aller à l'état 10


État 77

   10 STRATTEST: $@1 '/' TEST $@2 '?' STRATSELECT STRATTESTELSE . ';'

    ';'  décalage et aller à l'état 86


État 78

   32 PARAMVAL: error .

    $défaut  réduction par utilisation de la règle 32 (PARAMVAL)


État 79

   26 PARAMVAL: VALCASE .

    $défaut  réduction par utilisation de la règle 26 (PARAMVAL)


État 80

   27 PARAMVAL: VALDOUBLE .

    $défaut  réduction par utilisation de la règle 27 (PARAMVAL)


État 81

   28 PARAMVAL: VALINT .

    $défaut  réduction par utilisation de la règle 28 (PARAMVAL)


État 82

   29 PARAMVAL: VALSTRING .

    $défaut  réduction par utilisation de la règle 29 (PARAMVAL)


État 83

   25 PARAMPARAM: PARAMNAME @6 '=' PARAMVAL .

    $défaut  réduction par utilisation de la règle 25 (PARAMPARAM)


État 84

   31 PARAMVAL: @7 . STRATSELECT

    METHODNAME  décalage et aller à l'état 1
    '('         décalage et aller à l'état 2

    '/'       réduction par utilisation de la règle 8 ($@1)
    $défaut  réduction par utilisation de la règle 5 (STRATEMPTY)

    STRATSELECT  aller à l'état 87
    STRATEMPTY   aller à l'état 5
    STRATCONCAT  aller à l'état 6
    STRATTEST    aller à l'état 7
    $@1          aller à l'état 8
    STRATGROUP   aller à l'état 9
    STRATMETHOD  aller à l'état 10


État 85

    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY
   12 STRATTESTELSE: ':' STRATSELECT .

    '|'  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 12 (STRATTESTELSE)


État 86

   10 STRATTEST: $@1 '/' TEST $@2 '?' STRATSELECT STRATTESTELSE ';' .

    $défaut  réduction par utilisation de la règle 10 (STRATTEST)


État 87

    2 STRATSELECT: STRATSELECT . '|' STRATEMPTY
   31 PARAMVAL: @7 STRATSELECT .

    '|'  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 31 (PARAMVAL)
